[tool.poetry]
name = "connectedpapers-py"
version = "0.2.0"
description = "The official python client for the connected papers API."
authors = ["ConnectedPapersAdmin <admin@connectedpapers.com>", "KanHar <knaan.harpaz@gmail.com>"]
readme = "README.md"
packages = [{include = "connectedpapers"}]
repository = "https://github.com/ConnectedPapers/connectedpapers-py/"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.1"
requests = ">=2.0.0"
aiohttp = ">=2.0.0"
dacite = "^1.8.1"
nest-asyncio = "^1.5.7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
pytest = "^7.4.0"
flake8-pyproject = "^1.2.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["E501", "W503"]
